[tool.poetry]
name = "hexlet-code"
packages = [
  { include = "brain_games" },
]
version = "0.1.0"
description = ""
authors = ["Vladimir Shkarin <vladimir.shkarin@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
prompt = "^0.4.1"


[tool.poetry.group.dev.dependencies]
flake8 = "^7.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
brain-games = "brain_games.scripts.brain_games:main"