[tool.poetry]
name = "hexlet-code"
packages = [
  { include = "brain_games" },
]
version = "0.1.0"
description = "Brain Games is a collection of console-based brain games built in Python."
authors = ["Vladimir Shkarin <vladimir.shkarin@gmail.com>"]
readme = "README.md"
repository = "https://github.com/Vladimirshkarin/python-project-49"
classifiers = [
    "Topic :: Games/Entertainment :: Puzzle Games"
]

[tool.poetry.dependencies]
python = "^3.10"
prompt = "^0.4.1"


[tool.poetry.group.dev.dependencies]
flake8 = "^7.0.0"

ipykernel = "^6.29.4"
[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
brain-games = "brain_games.scripts.brain_games:main"
brain-even = "brain_games.scripts.brain_even:main"
brain-calc = "brain_games.scripts.brain_calc:main"
brain-gcd = "brain_games.scripts.brain_gcd:main"
brain-progression = "brain_games.scripts.brain_progression:main"
brain-prime = "brain_games.scripts.brain_prime:main"
